@@ -1,3 +1,7 @@
+2005-10-19  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/plugin-browser.c: strip ellipsis from menu labels.
+
 2005-10-19  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
 	* app/tools/gimprectangletool.c: "execute" the tool if the
